--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       <section>
         <h2>Чем мы занимаемся</h2>
           <ul>
-            <li><img src=".\images\website.jpg" alt="Десктопные приложения" width="370" /></li>
-            <li><img src=".\images\mobile.jpg" alt="Мобильные приложения" width="370" /></li>
-            <li><img src=".\images\design.jpg" alt="Дизайнерские решения" width="370" /></li>
+            <li><img src="./images/website.jpg" alt="Десктопные приложения" width="370" /></li>
+            <li><img src="./images/mobile.jpg" alt="Мобильные приложения" width="370" /></li>
+            <li><img src="./images/design.jpg" alt="Дизайнерские решения" width="370" /></li>
           </ul>
       </section>
       <!-- Наша команда -->
@@ -68,22 +68,22 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src=".\images\product-designer.jpg" alt="Product Designer" width="270">
+            <img src="./images/product-designer.jpg" alt="Product Designer" width="270">
             <h4>Игорь Демьяненко</h4>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src=".\images\frontent-developer.jpg" alt="Frontend Developer" width="270">
+            <img src="./images/frontent-developer.jpg" alt="Frontend Developer" width="270">
             <h4>Ольга Репина</h4>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src=".\images\marketing.jpg" alt="Marketing" width="270">
+            <img src="./images/marketing.jpg" alt="Marketing" width="270">
             <h4>Николай Тарасов</h4>
             <p>Marketing</p>
           </li>
           <li>
-            <img src=".\images\ui-designer.jpg" alt="UI Designer" width="270">
+            <img src="./images/ui-designer.jpg" alt="UI Designer" width="270">
             <h4>Михаил Ермаков</h4>
             <p>UI Designer</p>
           </li>
