Удаляет список в адресном блоке и заменяет его на <br />

--- a/index.html
+++ b/index.html
@@ -93,11 +93,9 @@
     <footer>
       <a href="" lang="en">WebStudio</a>
       <address>
-        <ul>
-          <li>г. Киев, пр-т Леси Украинки, 26</li>
-          <li><a href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+        г. Киев, пр-т Леси Украинки, 26<br />
+        <a href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a><br />
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
       </address>
     </footer>
   </body>
