--- a/index.html
+++ b/index.html
@@ -69,23 +69,23 @@
         <ul>
           <li>
             <img src="./images/product-designer.jpg" alt="Product Designer" width="270">
-            <h4>Игорь Демьяненко</h4>
-            <p>Product Designer</p>
+            <h3>Игорь Демьяненко</h3>
+            <p lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./images/frontent-developer.jpg" alt="Frontend Developer" width="270">
-            <h4>Ольга Репина</h4>
-            <p>Frontend Developer</p>
+            <h3>Ольга Репина</h3>
+            <p lang="en">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/marketing.jpg" alt="Marketing" width="270">
-            <h4>Николай Тарасов</h4>
-            <p>Marketing</p>
+            <h3>Николай Тарасов</h3>
+            <p lang="en">Marketing</p>
           </li>
           <li>
             <img src="./images/ui-designer.jpg" alt="UI Designer" width="270">
-            <h4>Михаил Ермаков</h4>
-            <p>UI Designer</p>
+            <h3>Михаил Ермаков</h3>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
